2013.09.06 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - bzero() has been replaced with memset(). (Thanks to Gavin Andresen)

2013.08.22 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* configure.ac:
	  - Avoid to use sdl-config. (Thanks to Heiko Becker)

2013.08.15 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* rsecc.[ch], qrencode.c, tests/test_rc.c:
	  - Code cleanups and refactoring.
	  - Bug fix.
	* configure.ac:
	  - Bumped version to 3.9.0, preparing for major update.
	* qrenc.c:
	  - Copyright year in usage has been updated.
	  - Help message improved.

2013.08.15 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* rsecc.[ch], rscode.[ch], Makefile.am, qrencode.c:
	  - Reed-Solomon error correction code has been completely rewritten.
	  - Phil Karn's code has been removed (moved to tests).
	* tests/test_rs.c, tests/test_qrencode.c, tests/rscode.[ch], tests/Makefile.am:
	  - Test codes related to ECC have been updated.
	  - Phil Karn's code has been moved to tests, just for test purpose.
	* tests/test_mqrspec.c:
	  - Code cleanup.

2013.07.29 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.4]
	* configure.ac, README, NEWS: 
	  - Bumped version to 3.4.3.

2013.07.16 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - missing break in switch. (Thanks to ßlúèÇhîp)
	* qrinput.c:
	  - missing/redundant breaks in some switch statements.

2013.06.17 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Merged pull request #29. (Thanks to Daniel Dörrhöfer)
	    - Run length encoding has been made non-default.
	    - New option "--rle" has been instroduced to enable run length encoding
	      for SVG format.

2013.03.30 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Renamed a variable ("index") to avoid compile-time warning. (Thanks to
	    Emmanuel Blot)
	  - Range check improved.
	* autogen.sh:
	  - bug fix.(Thanks to Emmanuel Blot)

2013.03.26 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Memory leak bug has been fixed. (Thanks to Hassan Hajji)